--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
         margin: 0;
         padding: 0;
       }
+      body {
+        margin: 10px;
+      }
       h1 {
         text-align: center;
-        margin: 10px;
       }
       .legends {
         display: flex;
